# C-

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
BoundedTypes/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  compile_commands.json
BoundedTypes/.clangd/index/: CustomTypes.hpp.FEAB227FC411BF32.idx  NegativeTests.cpp.9C9FFF7D27491228.idx  PositiveTests.cpp.AEC99F3E7AFB9617.idx  SafeTypes.hpp.8BFCCD66A4AA52E4.idx  SafeTypes_CXX14.hpp.FA3919B461C92719.idx  SafeTypes_CXX14.inl.5E712FCE842276AB.idx
BoundedTypes/.devcontainer/: devcontainer.json
BoundedTypes/BuildScripts/CMake/: BuildDemoLibrary.cmake  BuildGoogleTests.cmake  RunGoogleTests.cmake  SetBuildChainSpecifications.cmake  SetGlobalVariables.cmake
BoundedTypes/BuildScripts/Docker/: GCC-Debug-Build  GCC-Release-Build  GeneralBuild  Generate-Coverage-from-UnitTests  LLVM-Debug-Build  LLVM-Release-Build
BoundedTypes/CoreFunctions/Implementation/: Dummy.cpp
BoundedTypes/CoreFunctions/Interfaces/: dummyInterface.hpp
BoundedTypes/GoogleTests/: CMakeLists.txt
BoundedTypes/GoogleTests/Implementation/: CMakeLists.txt  test.cpp
BoundedTypes/GoogleTests/Interfaces/: CMakeLists.txt  test.cpp
BoundedTypes/GoogleTests/NegativeTests/: CMakeLists.txt  NegativeTests.cpp
BoundedTypes/GoogleTests/PositiveTests/: CMakeLists.txt  PositiveTests.cpp
BoundedTypes/Tools/Building-VMC2-With-MTC/: ParseCompileCommands.py
BoundedTypes/Tools/DockerBasedDevelopment/: CodeInContainerStartScripts.sh
C++OperatorExamples/: CMakeLists.txt  README.md  compile_commands.json
C++OperatorExamples/.devcontainer/: Dockerfile  devcontainer.json
C++OperatorExamples/BuildScripts/CMake/: BuildDemoLibrary.cmake  BuildGoogleTests.cmake  SetBuildChainSpecifications.cmake  SetGlobalVariables.cmake
C++OperatorExamples/GoogleTests/NegativeTests/: CMakeLists.txt  NegativeTests.cpp
C++OperatorExamples/GoogleTests/PositiveTests/: CMakeLists.txt  PositiveTests.cpp
CircularBuffer/: .clang-format  CMakeLists.txt  README.md  gmon.out
CircularBuffer/.devcontainer/: devcontainer.json
CircularBuffer/.devcontainer/BuildScripts/Docker/: GeneralBuild
CircularBuffer/CircularBuffer/: NegativeCompilerTests_CPP17.cpp  TypeExists.hpp  runNegativeCompilerTests_CPP17.sh  unit_tests.cpp
FIFO/: .clang-format  .clang-tidy  CMakeLists.txt  GPATH  GRTAGS  GTAGS  buildProject.sh  gmon.out
FIFO/.devcontainer/: Dockerfile  buildProject.sh  devcontainer.json
FIFO/CircularBuffer/: CMakeLists.txt  CircularBuffer.hpp  CircularBuffer.inl  NegativeCompilerTests_CPP20Concepts.cpp  main.cpp  runNegativeCompilerTests.sh  runNegativeCompilerTests_CPP17.sh  runNegativeCompilerTests_CPP20Concepts.sh  unit_tests.cpp
FIFO/CircularBuffer_Simplified/: CMakeLists.txt  CircularBuffer.hpp  CircularBuffer.inl  NegativeCompilerTests.cpp  unit_tests.cpp
FIFO/CoreFunctions/Application/: BaseComponent.hpp  Variant_AdditionInterface.cpp
FIFO/GoogleTests/PositiveTests/: PositiveTests.cpp
FIFO/Tools/DependencyAnalysis/: CodeDependencyVisualizer.py  README.md
FIFO/structured_bindings/: CMakeLists.txt  header.hpp  unit_tests.cpp
FIFO/test/: CMakeLists.txt  header.hpp  source.cpp  unit_tests.cpp
HelloComponents/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  buildProject.sh
HelloComponents/.devcontainer/: Dockerfile  devcontainer.json  requirements-py3.txt
HelloComponents/.devcontainer/Configurations/: .bashrc
HelloComponents/BuildScripts/CMake/: SetBuildChainSpecifications.cmake  convenience_functions.cmake
HelloComponents/CoreFunctions/: CMakeLists.txt
HelloComponents/CoreFunctions/Application/: AstDump.cpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  HelloComponents.test.cpp  Producer.cpp  Producer.hpp
HelloComponents/CoreFunctions/Main/: CMakeLists.txt  main.cpp
HelloComponents/Unittests/PositiveTests/: CMakeLists.txt  HelloComponents.test.cpp
InterfaceContracts/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  compile_commands.json  gmon.out
InterfaceContracts/.devcontainer/: devcontainer.json
InterfaceContracts/BuildScripts/CMake/: BuildDemoLibrary.cmake  ProvideBoundedTypes.cmake
InterfaceContracts/CoreFunctions/Application/: Component.cpp  Component.hpp  Componet.hpp
InterfaceContracts/GoogleTests/NegativeTests/: CMakeLists.txt  NegativeTests.cpp
MicroApplicationWIthMiddleware/: CMakeLists.txt  MicroApplicationWIthMiddleware.srctrldb  MicroApplicationWIthMiddleware.srctrlprj  README.md  buildProject.sh  massif.out.26303  massif.out.26320
MicroApplicationWIthMiddleware/BuildScripts/CMake/: BuildGoogleTests.cmake
MicroApplicationWIthMiddleware/GoogleTests/: CMakeLists.txt
MicroApplicationWIthMiddleware/GoogleTests/AllTests/: CMakeLists.txt  TestCustomFilter.cpp  TestGenerator.cpp  TestManipulator.cpp  Test_GeneratorManipulatorConnection.cpp  VanillaTemplateTest.cpp
MicroApplicationWIthMiddleware/References/: C++ One std::vector containing template class of multiple types - Stack Overflow.desktop
MicroApplicationWIthMiddleware/Valbring/: Trace.cfg
MicroApplicationWIthMiddleware/src/: AbstractFilter.hpp  Builder.hpp  Builder.inl  ConcreteFilter_TypeA.cpp  ConcreteFilter_TypeA_MyApp.cpp  ConcreteFilter_TypeB.cpp  ConcreteFilter_TypeB_MyApp.cpp  ConcreteFilter_TypeC.cpp  ConcreteFilter_TypeC_MyApp.cpp  ConcreteFilter_TypeD.cpp  ConcreteFilter_TypeD_MyApp.cpp  ConcreteFilter_TypeE.cpp  ConcreteFilter_TypeE_MyApp.cpp  CustomMemoryManagement.hpp  CustomMemoryManagement.inl  Filter.hpp  GenerateDataStream.cpp  GenerateDataStream.hpp  ID  ManipulateDataStream.cpp  ManipulateDataStream.hpp  MemoryBounds.hpp  MyApp.hpp  NotMyApp.hpp  TemplatedClass.hpp  TemplatedClass.inl  TypeA.hpp  TypeB.hpp  TypeC.hpp  TypeD.hpp  TypeE.hpp  main.cpp
PIMPL-With-RawPointers-PlacementNew/: CMakeLists.txt  README.md  buildProject.sh
PIMPL-With-UniquePtr-PlacementNew/: CMakeLists.txt  README.md  buildProject.sh  main.cpp
Variants/: GPATH  GRTAGS  GTAGS  Variants.srctrldb  Variants.srctrlprj  compile_commands.json  gmon.out  uml.dot
Variants/.devcontainer/: Dockerfile
Variants/BuildScripts/CMake/: BuildDemoLibrary.cmake  (+1 more)
(+22 files in other folders)
